resources/css/cf3/structure.css
#main {
    padding: 20px;
}

footer {
    text-align: center;
    margin: 1.5em 0;
    font-size: .8em;
}

footer a {
    color: #999;
}

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
    header {
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
    }
    #sidebar {
        position: fixed;
        top: 42px;
        bottom: 0;
        left: 0;
        width: 200px;
    }
    #sidebar > ul {
        position: absolute;
        top: 0;
        bottom: 45px;
        left: 0;
        right: 0;
        overflow-x: hidden;
        overflow-y: auto;
    }

    #notifications {
        position: absolute;
        left: 0;
        right: 0;
        top: 16px;
        margin: 0 50px 0 250px;
    }

    #main {
        margin: 50px 50px 0 250px;
    }

    footer {
        width: 200px;
        position: fixed;
        left: 0;
        bottom: 0;
    }
}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {

}

/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {

}

